Fixed VelocityGenerator and lots of other stuff